--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,15 +1,17 @@
 body{
     margin: 0;
-    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('camera-lens-458045_1920.jpg');
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('cameraBGDark.png');
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 1;
+    overflow-y: scroll;
 }
 
 #newbg{
     width: 100%;
     height: 100vh;
-    background-color: white;
+    background-color: navajowhite;
+    text-align: center;
 }
 
 #nav{
@@ -18,16 +20,17 @@ body{
     margin: 0;
     background-color: ghostwhite;
     z-index: 8;
+    text-align: center;
 }
 
 #navTitle{
-    position: absolute;
-    top: 2%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
+    margin-top: 0.5rem;
+    display: inline-block;
+    width: 100px;
     font-size: 30px;
     color: #df514c;
-    font-family: 'Cormorant Garamond', serif;
+    font-family: 'Libre Franklin', sans-serif;
 }
 
 #imageLogo{
@@ -41,13 +44,12 @@ body{
 
 }
 
-#logBtn{
+#aboutBtn{
     float: right;
     border-radius: 15px;
-    color: white;
+    color: ghostwhite;
     background-color: #df514c;
-    font-family: 'Cormorant Garamond', serif;
-    width: 80px;
+    font-family: 'Open Sans', sans-serif;
     height: 35px;
     font-size: 20px;
     text-align: center;
@@ -58,21 +60,194 @@ body{
     align-items: center;
     cursor: pointer;
     border: none;
+    outline: none;
 
 }
 
-#logBtn:hover{
+#aboutBtn:hover{
     background-color: #f2ae72;
 }
 
 #intro{
-    font-family: 'Cormorant Garamond', serif;
+    font-family: 'Libre Franklin', sans-serif;
     text-align: center;
     width: 100%;
-    font-size: 60px;
+    font-size: 45px;
     color: ghostwhite;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.container {
+    position: absolute;
+    display: block;
+    top: 57%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 40px;
+    text-align: center;
+}
+
+
+#logBtn {
+    padding: 20px 40px;
+    background: none;
+    border: none;
+    position: relative;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 3px;
+    cursor: pointer;
+    color: ghostwhite;
+    outline: none;
+}
+#logBtn:after, #logBtn:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border: 2px solid ghostwhite;
+    -webkit-transition: -webkit-transform 0.2s;
+    transition: -webkit-transform 0.2s;
+    transition: transform 0.2s;
+    transition: transform 0.2s, -webkit-transform 0.2s;
+}
+#logBtn:after {
+    -webkit-transform: translate(3px, 3px);
+    transform: translate(3px, 3px);
+}
+#logBtn:before {
+    -webkit-transform: translate(-3px, -3px);
+    transform: translate(-3px, -3px);
+}
+#logBtn:hover:after, #logBtn:hover:before {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+}
+
+.welcome{
+    display: block;
+    padding-top: 20px;
+    width: 100%;
+    color: #588c73;
+    font-size: 50px;
+    font-family: 'Libre Franklin', sans-serif;
+
+}
+
+/* Photocanvas*/
+#photoCanvas{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    justify-content: center;
+}
+
+/* logout btn styling */
+#logOut {
+    outline: none;
+    height: 40px;
+    text-align: center;
+    width: 130px;
+    border-radius: 40px;
+    background: #fff;
+    border: 2px solid #588c73;
+    margin-top: 15px;
+    color: #588c73;
+    letter-spacing: 1px;
+    text-shadow: 0;
+    font-size: 12px;
+    font-weight: bold;
+    cursor: pointer;
+    -webkit-transition: all 0.25s ease;
+    transition: all 0.25s ease;
+}
+#logOut:hover {
+    color: white;
+    background: #588c73;
+}
+#logOut:active {
+    letter-spacing: 2px;
+}
+
+.onclic {
+    width: 40px;
+    border-color: #bbbbbb;
+    border-width: 3px;
+    font-size: 0;
+    border-left-color: #588c73;
+    -webkit-animation: rotating 2s 0.25s linear infinite;
+    animation: rotating 2s 0.25s linear infinite;
+}
+.onclic:after {
+    content: "";
+}
+.onclic:hover {
+    color: #588c73;
+    background: white;
+}
+
+.validate {
+    font-size: 13px;
+    color: white;
+    background: #588c73;
+}
+.validate:after {
+    font-family: 'FontAwesome';
+    content: "\f00c";
+}
+
+@-webkit-keyframes rotating {
+    from {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes rotating {
+    from {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+/* photo grid styles */
+
+#photoGrid{
+    display: block;
+    width: 100%;
+    height: 100%;
+
+}
+
+/* upload feature styles */
+#uploader{
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-appearance: none;
+    appearance: none;
+    width: 30%;
+    margin-bottom: 10px;
+}
+
+#fileButton{
+    position: absolute;
+    top: 20%;
+    left: 72%;
+    transform: translate(-50%, -50%);
+
 }
